--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,66 +1,58 @@
-.site-header {
-    @include grid-column-row();
-    @include spaced-bottom();
-    margin-top: $vspace-small / 2;
+html {
+    overflow-y: scroll;
+}
+
+.main, .site-header {
+    max-width: $global-width;
+    margin: auto;
+    padding: 0 0.25rem 0;
+    @include spaced;
 
     @include breakpoint(medium) {
-        margin-top: $vspace-medium / 2;
-    }
-
-    @include breakpoint(large) {
-        margin-top: $vspace-large / 2;
+        padding: 0 0.5rem 0;
     }
 }
 
-.main {
-    @include grid-row();
-    @include spaced();
-
-    &__content {
-        @include grid-column(12);
-    }
-}
-
-.movie-list {
-    @include grid-row-nest();
-    @include grid-layout(2, ".movie-list__movie");
+.ratings-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 0.5rem;
 
     @include breakpoint(medium) {
-        @include grid-layout(4, ".movie-list__movie");
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1rem;
     }
 
     @include breakpoint(large) {
-        @include grid-layout(5, ".movie-list__movie");
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.year {
+    text-align: center;
+
+    &__title {
+        font-size: 1.25rem;
+        background-color: $primary-color;
+        padding: 0.5rem 0.25rem;
+    }
+}
+
+.movie {
+    padding: 0.25rem;
+    margin-bottom: 2rem;
+
+    &__title {
+        font-size: 1.5rem;
     }
 
-    &__movie {
-        @include grid-column();
-        @include grid-column-end();
-        text-align: center;
-        margin-bottom: $vspace-small / 2;
-
-        @include breakpoint(medium only) {
-            margin-bottom: $vspace-medium / 2;
-        }
-
-        @include breakpoint(large) {
-            margin-bottom: $vspace-large / 2;
-        }
-    }
-
-    &__movie-info {
-        padding-top: 0.5em;
-    }
-
-    &__user-rating {
-        margin-right: 1em;
-    }
-
-    i {
-        color: $medium-gray;
-    }
-
-    p:last-child {
+    &__ratings {
+        color: $secondary-color;
+        font-size: 0.8rem;
         margin-bottom: 0;
+    }
+
+    &__user-rating, &__all-users-rating {
+        padding: 0 0.5rem;
     }
 }
