--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,9 +32,13 @@ html {
     text-align: center;
 
     &__title {
-        font-size: 1.25rem;
+        font-size: 1rem;
         background-color: $primary-color;
         padding: 0.5rem 0.25rem;
+
+        @include breakpoint(medium) {
+            font-size: 1.25rem;
+        }
     }
 }
 
@@ -43,7 +47,22 @@ html {
     margin-bottom: 2rem;
 
     &__title {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
+
+        a {
+            color: $black;
+            border-bottom: 2px solid transparent;
+            transition: border-bottom 0.25s ease-in-out;
+        }
+
+        a:hover {
+            color: $black;
+            border-bottom: 2px solid $primary-color;
+        }
+
+        @include breakpoint(medium) {
+            font-size: 1.5rem;
+        }
     }
 
     &__ratings {
