Style the navigation

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -61,6 +61,11 @@ $body-font-family: 'Cantarell', 'Helvetica Neue', Helvetica, Roboto, Arial, sans
 
 $header-font-family: join('Fjalla One', $body-font-family);
 
+// 11. Button
+// ----------
+
+$button-fill: hollow;
+
 // 56. Xy Grid
 // -----------
 
