--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,12 +40,23 @@ html {
     }
 }
 
-.page-title {
-    font-size: 2rem;
+.upload-file-input {
+    margin-bottom: 3rem;
+}
+
+.page-header {
     background-color: $primary-color;
     text-align: center;
-    padding: 0.5rem 0.25rem;
+    padding: 0.5rem 0.5rem;
     margin-bottom: 2rem;
+
+    &__title {
+        font-size: 2rem;
+    }
+
+    &__description:last-child {
+        margin-bottom: 0;
+    }
 }
 
 .ratings-list {
